<resources>
    <string name="no_network_connection">No network connection!</string>
    <string name="day_ago">Day ago</string>
    <string name="hour_ago">Hour ago</string>
    <string name="minute_ago">Minute ago</string>
    <string name="second_ago">Second ago</string>
    <string name="momment_ago">Moment ago</string>
    <string name="home">Home</string>
    <string name="detail">Detail</string>
    <string name="main_activity">MainActivity</string>
    <string name="app_name">KOI Thé Cambodia</string>
    <string name="channel_id">Notification Channel</string>
    <string name="welcome_desc">Sign up for KOI Thé Membership\n Program to receive updates, collect Bubbles,\n and get exclusive​​ member benefits.</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">295704917227559</string>
    <string name="fb_login_protocol_scheme">fb295704917227559</string>
    <string name="item_top"><![CDATA[ &#160;<font color=#000000 size=\'28\'>%1$s : </font><font color=#7e7e7e size=\'18\'><b> %2$s </b></font>]]></string>
    <string name="item_single"><![CDATA[ <font color=#000000 size=\'28\'><b>%1$s</b></font><br>]]></string>
    <string name="item_list"><![CDATA[ &#160;<font color=#000000 size=\'28\'>%1$s : </font><font color=#7e7e7e size=\'18\'> <b>%2$s</b> </font><br>]]></string>
    <string name="internal_storage">Internal storage</string>
    <string name="item_address_distance"><![CDATA[ <font color=#000000 size=\'18dp\'><b>%1$s </b></font><font color=#7e7e7e size=\'12\'><small><small>&#160;  %2$s </small></small></font>]]></string>
    <string name="error_msg">Sorry! Couldn\'t fetch data.</string>
    <string name="btn_retry">Retry</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_timeout">The server took too long to respond</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="header_membership">MEMBERSHIP</string>
    <string name="membershipcard">MEMBERSHIP CARD</string>
    <string name="create_one">Create one</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="inbox">INBOX</string>
    <string name="password">Password</string>
    <string name="email_tel">Email/Tel</string>
    <string name="welcome">Welcome</string>
    <string name="connect_with_facebook">CONNECT WITH FACEBOOK</string>
    <string name="forgot_your_passwords">FORGOT YOUR PASSWORD?</string>
    <string name="forgot_password_desc">Don’t worry. Resetting your password is easy. Just tell us the email address you registered with.</string>
    <string name="email_address"><font size="12">Email address / Phone Number</font></string>
    <string name="reset_your_password">RESET YOUR PASSWORD</string>
    <string name="sign_up">Sign Up</string>
    <string name="home_nav_label">HOME</string>
    <string name="outlets_nav_label">OUTLETS</string>
    <string name="order_nav_label">ORDER</string>
    <string name="koi_pay_nav_label">KOI PAY</string>
    <string name="account_and_settings"><![CDATA[ACCOUNT & SETTINGS]]></string>
    <string name="hello">Hello,</string>
    <string name="you_re_a_black_member">YOU\'RE A</string>
    <string name="reward_point">Reward Bubbles</string>
    <string name="reward">REWARDS BUBBLES</string>
    <string name="reward_details">Rewards Details</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <string name="reward_points_30_points">REWARD POINTS 30 POINTS</string>
    <string name="edit_profile_info">Edit Profile</string>
    <string name="set_up_pass_code_pin">set up Pass code pin</string>
    <string name="passcode_lock">Passcode Lock</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="add_card">ADD CARD</string>
    <string name="your_balance">YOUR BALANCE</string>
    <string name="deactivate_card">Deactivate Card</string>
    <string name="done">Done</string>
    <string name="change_password">Change Password</string>
    <string name="collect_awesome_stuffs">COLLECT AWESOME STUFFS</string>
    <string name="first_name">First name</string>
    <string name="map_list">Map List</string>
    <string name="direct">direction</string>
    <string name="call">call</string>
    <string name="city">City / Province</string>
    <string name="phone">Phone Number </string>
    <string name="confirm">CONFIRM</string>
    <string name="total_amount">Amount To Be Paid</string>
    <string name="confirm_order">CONFIRM ORDER</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="item_total">Item Total</string>
    <string name="_120">120</string>
    <string name="add_items">Add Items</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="send">Send</string>
    <string name="_1337999">#1337999</string>
    <string name="awesomeeee">Awesome!</string>
    <string name="see_more">See more</string>
    <string name="best_tea_houses_in_town">BEST TEA HOUSES IN TOWN</string>
    <string name="verification">Verification</string>
    <string name="submit">SUBMIT</string>
    <string name="pin">PIN*</string>
    <string name="select_category">Select Category</string>
    <string name="_1_70">$ 1.70</string>
    <string name="pick_up__">Pick Up</string>
    <string name="order_complete">Order Complete</string>
    <string name="tompoung_00032">TOMPOUNG-00032</string>
    <string name="order_id_d_koi_ifl_toul">Order Id #D-KOI IFL TOUL</string>
    <string name="order_at_2020_03_3884_pm">Order at 2020/03/3884 PM</string>
    <string name="phone_place_holder">068-68-68-686</string>
    <string name="suggestion_message">Suggestion message</string>
    <string name="something_when_wrong">Something When wrong</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="please_choose_your_ice_level">Please choose your ice level*</string>
    <string name="history">HISTORY</string>
    <string name="item_name">item name</string>
    <string name="forgot_passcode">Forgot passcode?</string>
    <string name="change_passcode">CHANGE PASSCODE</string>
    <string name="turn_passcode_off">TURN PASSCODE OFF</string>
    <string name="you_can_sign_out_to_turn_off_your_passcode">You can sign out to turn off your passcode.</string>
    <string name="pay_by_membership_card"><font color="#fff" size="13">KOI Membership Card</font> \n<font color="#858585" size="10">Pay with KOI Card to receive Reward and Member Bubbles</font></string>
    <string name="pay_by_aba_card"><font color="#fff" size="13">ABA PAY</font>\n<font color="#858585" size="10">Tap to pay with ABA Mobile</font></string>
    <string name="pay_by_vathanak_card"><font color="#fff" size="13">Vathanak PAY</font>\n<font color="#858585" size="10">Tap to pay with Vathank Mobile</font></string>
    <string name="pay_by_phillip_card"><font color="#fff" size="13">Phillip PAY</font>\n<font color="#858585" size="10">Tap to pay with Phillip Mobile</font></string>
    <string name="customer_feedback"><u>Share Us Your Feedback</u>.</string>
    <string name="select_payment_option">Select Payment Option</string>
    <string name="phone_number">Phone Number</string>
    <string name="i_agree_with_all_the_terms_of_use">I agree with all the Terms of Use</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="pin_code">Pin Code</string>
    <string name="resend_pin">Resend Pin</string>
    <string name="your_card_collection">YOUR CARD COLLECTION</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="make_this_app_more">LET’S MAKE THIS APP MORE FRIENDLY</string>
    <string name="version">Version</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="let_keep_in_touch">LET\'S KEEP IN TOUCH</string>
    <string name="self_orders">SELF ORDER</string>
    <string name="pick_up">PICK UP</string>
    <string name="delivery">DELIVERY</string>
    <string name="location">LOCATIONS</string>
    <string name="continues">CONTINUE</string>
    <string name="checkout">CHECKOUT</string>
    <string name="total_items">Total Items</string>
    <string name="member_point">Member Point</string>
    <string name="continues_shopping">continue Shopping</string>
    <string name="cancel">CANCEL</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="your_item_s_has_been_added_to_the_basket">Your item(s) has been added to the basket.</string>
    <string name="success">Success</string>
    <string name="choose_option">Choose Option</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="koi_card_number">KOI CARD NUMBER</string>
    <string name="serial_number">SERIAL NUMBER</string>
    <string name="activate_card">Activate Card</string>
    <string name="contact_outlet">Contact outlet</string>
    <string name="no_item_in_cart">No item in cart ...</string>
    <string name="drink_menu">DRINK MENU</string>
    <string name="drink_of_the_month">DRINK OF THE MONTH</string>
    <string name="log_out">Log out</string>
    <string name="enter_a_passcode_of_4_degits">Enter a passcode of 4 digits</string>
    <string name="re_enter_new_passcode">Re-enter new passcode</string>
    <string name="passcode_is_incorrect">Passcode is correct</string>
    <string name="passcode_do_not_match">Passcode do not match</string>
    <string name="change_your_passcode">CHANGE YOUR PASSCODE</string>
    <string name="verify_passcode">VERIFY PASSCODE</string>
    <string name="verify_passcode_of_4_digits">Verify passcode of 4 digits</string>
    <string name="passcode_setting">Passcode Setting</string>
    <string name="password_must_contain_number_capital_and_lower_letters_at_least_8_characters">Password must contain : number, capital and lower letters, at least 8 characters</string>
    <string name="password_not_match">Password not match</string>
    <string name="your_location_services_is">Your Location Services is turned off. Please turn it on to get the nearest branches, otherwise click on See More.</string>
    <string name="dismiss">Dismiss</string>
    <string name="address">Address</string>
    <string name="send_pin">Send Pin</string>
    <string name="total_price">Total Price</string>
    <string name="amount">Amount</string>
    <string name="outlet">Outlet</string>
    <string name="koi_vatanak">KOI Vatanak</string>
    <string name="include_vat">(Include VAT)</string>
    <string name="order_number">ORDER NUMBER</string>
    <string name="order_detail">ORDER DETAIL</string>
    <string name="image">Image</string>
    <string name="size">CUP SIZE</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="coffee_jelly_oolong_milk_tea">Coffee Jelly Oolong Milk Tea</string>
    <string name="money">$</string>
    <string name="oops">Oops !</string>
    <string name="available">Available</string>
    <string name="description">Items List</string>
    <string name="share_us_your_feedback">Share Us Your Feedback</string>
    <string name="google">Google Form</string>
    <string name="telegram">Telegram</string>
    <string name="top_up">TOP UP</string>
</resources>