<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Appbar section-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/font_style_bold"
            android:text="@string/koi_pay_nav_label"/>

    </LinearLayout>
    <!-- End Appbar section-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        style="@style/font_style_regular"
        android:text="@string/your_balance" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/font_style_bold"
            android:text="200.0 USD"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/solid_button"
            android:textColor="@color/white"
            android:text="@string/top_up"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/font_style_bold"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:text="@string/your_card_collection"/>

</LinearLayout>