<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/chevron_left"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        style="@style/header_style"
        android:textColor="@color/color_background"
        android:textAlignment="center"
        android:paddingVertical="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:textColor="#767676"
        android:layout_marginHorizontal="20dp"
        android:text="@string/email_tel"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/email_tel"
        style="@style/blackTextFieldStyle"/>

    <View android:background="#BFBFBF"
        android:layout_gravity="center"
        android:layout_width = "match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="0.5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:textColor="#767676"
        android:layout_marginHorizontal="20dp"
        android:text="@string/password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/password"
        style="@style/blackTextFieldStyle"/>

    <View android:background="#BFBFBF"
        android:layout_gravity="center"
        android:layout_width = "match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="0.5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="70dp"
        android:layout_marginVertical="30dp"
        android:textSize="15sp"
        android:text="@string/sign_in"
        android:background="@drawable/solid_button"
        android:textColor="@color/color_background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        android:layout_gravity="center"
        android:textColor="@color/koi_green"
        android:layout_marginBottom="5dp"
        style="@style/font_style_medium"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            style="@style/font_style_regular"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/don_t_have_an_account_yet"
            android:textColor="@color/color_background" />

        <TextView
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_one"
            android:layout_marginStart="5dp"
            android:textColor="@color/koi_green"
            style="@style/font_style_regular"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>

